--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         if (!isValidEmbed()) {
             document.body.innerHTML = '<h1>চুরি করা মহাপাপ(By Order Of Talha, The Creator Of This Page)</h1><p></p>';
         } else {
-            jwplayer.key = 'EP3tanOyfjurKgiA7KLnzMTekvDl1Wr14XmAOqNBk3eDc3Yyao+866DfCQaHUofh';
+            jwplayer.key = '';
 
             function setupPlayer(videoUrls, drmOptions = null, posterUrl = null) {
                 const playlistItems = videoUrls.map((url, index) => {
@@ -153,8 +153,8 @@
                     "https://api005.backblazeb2.com/file/ssbucket/2c14766b-72c3-11ef-bfa3-d50bcd41e956.mp4"
                 ],
                 {
-                    keyId: "c18b6aa739be4c0b774605fcfb5d6b68",
-                    key: "e41c3a6f7532b2e3a828d9580124c89d"
+                    keyId: "",
+                    key: ""
                 },
                 ""
             );
