--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             function setupPlayer(videoUrls, drmOptions = null, posterUrl = null) {
                 const playlistItems = videoUrls.map((url, index) => {
                     return {
-                        title: `Talha's Stream ${index + 1}`,
-                        description: "You're Watching",
-                        image: "https://s11.gifyu.com/images/S11rD.jpg",
+                        title: "Welcome To Team Padma",
+                        description: "Made By Abu Talha Taj",
+                        image: "https://s11.gifyu.com/images/S12Bo.jpg",
                         sources: [
                             {
                                 file: url,
