--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     return {
                         title: "Welcome To Team Padma",
                         description: "Made By Abu Talha Taj",
-                        image: "https://s11.gifyu.com/images/S12Bo.jpg",
+                        image: "https://s11.gifyu.com/images/S1JiQ.jpg",
                         sources: [
                             {
                                 file: url,
