--- a/index.html
+++ b/index.html
@@ -4,46 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chained Facebook Video</title>
-
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
-    <style>
-        /* Style for the text overlay */
-        .overlay-text {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 24px;
-            color: white;
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 10px;
-            border-radius: 10px;
-            display: none;
-        }
-        .video-container {
-            position: relative;
-            padding-top: 56.25%; /* 16:9 Aspect Ratio */
-            margin-bottom: 20px;
-        }
-        .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
 </head>
 <body>
 
-<div class="container">
     <!-- First Facebook Video -->
-    <div id="fb-video1-container" class="video-container">
-        <!-- Overlay text -->
-        <div id="overlay-text1" class="overlay-text">Made By Abu Talha Raj</div>
-
+    <div id="fb-video1-container">
         <div class="fb-video" 
             data-href="https://www.facebook.com/abutalharaj002/videos/475659621772404/" 
             data-width="560" 
@@ -52,84 +17,51 @@
     </div>
 
     <!-- Second Facebook Video (initially hidden) -->
-    <div id="fb-video2-container" class="video-container" style="display:none;">
-        <!-- Overlay text -->
-        <div id="overlay-text2" class="overlay-text">Made By Abu Talha Raj</div>
-
+    <div id="fb-video2-container" style="display:none;">
         <div class="fb-video" 
             data-href="https://www.facebook.com/abutalharaj002/videos/1032319684962549/" 
             data-width="560" 
             data-show-text="false" 
             data-autoplay="true"></div>
     </div>
-</div>
 
-<!-- Bootstrap JS and dependencies -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Load the Facebook SDK
+        window.fbAsyncInit = function() {
+            FB.init({
+                xfbml      : true,
+                version    : 'v10.0'
+            });
 
-<script>
-    // Load the Facebook SDK
-    window.fbAsyncInit = function() {
-        FB.init({
-            xfbml      : true,
-            version    : 'v10.0'
-        });
+            // Subscribe to video player events
+            FB.Event.subscribe('xfbml.ready', function(msg) {
+                if (msg.type === 'video') {
+                    var video1Player = msg.instance;
 
-        // Subscribe to video player events
-        FB.Event.subscribe('xfbml.ready', function(msg) {
-            if (msg.type === 'video') {
-                var video1Player = msg.instance;
+                    // Listen for the end of the first video
+                    video1Player.subscribe('finishedPlaying', function() {
+                        // Hide the first video container
+                        document.getElementById('fb-video1-container').style.display = 'none';
+                        
+                        // Show the second video container and reload it
+                        document.getElementById('fb-video2-container').style.display = 'block';
 
-                // Show the overlay text before the video starts
-                document.getElementById('overlay-text1').style.display = 'block';
+                        // Reload the XFBML to render the second video
+                        FB.XFBML.parse(document.getElementById('fb-video2-container'));
+                    });
+                }
+            });
+        };
 
-                // Listen for when the first video starts playing
-                video1Player.subscribe('startedPlaying', function() {
-                    document.getElementById('overlay-text1').style.display = 'none';
-                });
-
-                // Listen for when the first video finishes playing
-                video1Player.subscribe('finishedPlaying', function() {
-                    // Hide the first video container
-                    document.getElementById('fb-video1-container').style.display = 'none';
-                    
-                    // Show the second video container and reload it
-                    document.getElementById('fb-video2-container').style.display = 'block';
-
-                    // Reload the XFBML to render the second video
-                    FB.XFBML.parse(document.getElementById('fb-video2-container'));
-
-                    // Show the overlay text for the second video
-                    document.getElementById('overlay-text2').style.display = 'block';
-                });
-            }
-        });
-    };
-
-    // Load the Facebook SDK asynchronously
-    (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "https://connect.facebook.net/en_US/sdk.js";
-        fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-
-    // Hide the text overlay for the second video when it starts playing
-    function hideOverlayTextOnPlay() {
-        FB.Event.subscribe('xfbml.ready', function(msg) {
-            if (msg.type === 'video') {
-                var video2Player = msg.instance;
-
-                // Listen for when the second video starts playing
-                video2Player.subscribe('startedPlaying', function() {
-                    document.getElementById('overlay-text2').style.display = 'none';
-                });
-            }
-        });
-    }
-</script>
+        // Load the Facebook SDK asynchronously
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
 
 </body>
 </html>
