--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chained Facebook Video</title>
+    <style>
+        /* Responsive video container */
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            height: 0;
+            overflow: hidden;
+            max-width: 100%;
+        }
+
+        .video-container iframe, 
+        .video-container .fb-video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
 
     <!-- First Facebook Video -->
-    <div id="fb-video1-container">
+    <div id="fb-video1-container" class="video-container">
         <div class="fb-video" 
             data-href="https://www.facebook.com/abutalharaj002/videos/475659621772404/" 
             data-width="560" 
@@ -17,7 +36,7 @@
     </div>
 
     <!-- Second Facebook Video (initially hidden) -->
-    <div id="fb-video2-container" style="display:none;">
+    <div id="fb-video2-container" class="video-container" style="display:none;">
         <div class="fb-video" 
             data-href="https://www.facebook.com/abutalharaj002/videos/1032319684962549/" 
             data-width="560" 
