--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <style>
         /* Responsive video container */
         .video-container {
-            position: relative;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
-            height: 0;
-            overflow: hidden;
-            max-width: 100%;
+            position: absolute;
+            width: 100% !important;
+            height: 100% !important;
+            background-color: #000;
         }
 
         .video-container iframe, 
