--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
         .video-container iframe, 
         .video-container .fb-video {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            width: 100% !important;
+            height: 100% !important;
+            background-color: #000;
         }
     </style>
 </head>
