--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         .video-container {
             position: relative;
             padding-bottom: 56.25%; /* 16:9 aspect ratio */
-            height: 200;
+            height: 200px;
             overflow: hidden;
-            max-width: 150%;
+            width: 300px;
             margin-bottom: 0px; /* Spacing between videos */
         }
 
@@ -19,8 +19,8 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
+            width: 300px;
+            height: 2000px;
         }
 
         /* Fullscreen container styling */
