--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 
     <!-- Fullscreen toggle button -->
-    <button id="fullscreen-btn" style="display: none;">Enter Fullscreen</button>
+    <button id="fullscreen-btn" style="display: none;">Fullscreen</button>
 
     <script>
         // Fullscreen toggle functionality
