--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         /* Responsive video container for fullscreen-like effect */
         .video-container {
-            position: relative;
+            position: absolute;
             padding-bottom: 56.25%; /* 16:9 aspect ratio */
             height: 200px;
             overflow: hidden;
@@ -20,7 +20,7 @@
             top: 0;
             left: 0;
             width: 300px;
-            height: 2000px;
+            height: 200px;
         }
 
         /* Fullscreen container styling */
