--- a/index.html
+++ b/index.html
@@ -5,48 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chained Facebook Video</title>
     <style>
-        /* Responsive video container for fullscreen-like effect */
+        /* Responsive video container */
         .video-container {
-            position: absolute;
+            position: relative;
             padding-bottom: 56.25%; /* 16:9 aspect ratio */
-            height: 200px;
+            height: 0;
             overflow: hidden;
-            width: 300px;
-            margin-bottom: 0px; /* Spacing between videos */
+            max-width: 100%;
         }
 
+        .video-container iframe, 
         .video-container .fb-video {
             position: absolute;
             top: 0;
             left: 0;
-            width: 300px;
-            height: 200px;
-        }
-
-        /* Fullscreen container styling */
-        .fullscreen {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            padding-bottom: 0;
-            z-index: 9999;
-        }
-
-        /* Basic button styling */
-        #fullscreen-btn {
-            padding: 10px 20px;
-            margin: 10px 0;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        #fullscreen-btn:hover {
-            background-color: #0056b3;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
@@ -70,24 +44,7 @@
             data-autoplay="true"></div>
     </div>
 
-    <!-- Fullscreen toggle button -->
-    <button id="fullscreen-btn" style="display: none;">Fullscreen</button>
-
     <script>
-        // Fullscreen toggle functionality
-        function toggleFullScreen(containerId) {
-            const container = document.getElementById(containerId);
-            if (!document.fullscreenElement) {
-                container.classList.add('fullscreen');
-                container.requestFullscreen().catch(err => {
-                    console.error(`Error trying to enter fullscreen: ${err.message}`);
-                });
-            } else {
-                document.exitFullscreen();
-                container.classList.remove('fullscreen');
-            }
-        }
-
         // Load the Facebook SDK
         window.fbAsyncInit = function() {
             FB.init({
@@ -100,9 +57,6 @@
                 if (msg.type === 'video') {
                     var video1Player = msg.instance;
 
-                    // Show fullscreen button when video is ready
-                    document.getElementById('fullscreen-btn').style.display = 'inline-block';
-
                     // Listen for the end of the first video
                     video1Player.subscribe('finishedPlaying', function() {
                         // Hide the first video container
@@ -113,11 +67,6 @@
 
                         // Reload the XFBML to render the second video
                         FB.XFBML.parse(document.getElementById('fb-video2-container'));
-                    });
-
-                    // Add fullscreen button functionality
-                    document.getElementById('fullscreen-btn').addEventListener('click', function() {
-                        toggleFullScreen('fb-video1-container');
                     });
                 }
             });
@@ -131,14 +80,6 @@
             js.src = "https://connect.facebook.net/en_US/sdk.js";
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
-
-        // Event listener for exiting fullscreen
-        document.addEventListener('fullscreenchange', () => {
-            const container = document.getElementById('fb-video1-container');
-            if (!document.fullscreenElement) {
-                container.classList.remove('fullscreen');
-            }
-        });
     </script>
 
 </body>
