--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         .video-container .fb-video {
             position: absolute;
             top: 0;
-            left: 0;
+            left: 10px;
             width: 100%;
             height: 100%;
         }
