--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         .video-container iframe, 
         .video-container .fb-video {
             position: absolute;
-            top: 0;
-            left: -4px;
+            top: 0px;
+            left: 0px;
             width: 100%;
             height: 100%;
         }
