--- a/index.html
+++ b/index.html
@@ -3,84 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chained Facebook Video</title>
-    <style>
-        /* Responsive video container */
-        .video-container {
-            position: relative;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
-            height: 0;
-            overflow: hidden;
-            max-width: 100%;
-        }
-
-        .video-container iframe, 
-        .video-container .fb-video {
-            position: absolute;
-            top: 0px;
-            left: 0px;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    <title>Embed Facebook Video</title>
 </head>
 <body>
-
-    <!-- First Facebook Video -->
-    <div id="fb-video1-container" class="video-container">
-        <div class="fb-video" 
-            data-href="https://www.facebook.com/abutalharaj002/videos/475659621772404/" 
-            data-width="700" 
-            data-show-text="false" 
-            data-autoplay="true"></div>
-    </div>
-
-    <!-- Second Facebook Video (initially hidden) -->
-    <div id="fb-video2-container" class="video-container" style="display:none;">
-        <div class="fb-video" 
-            data-href="https://www.facebook.com/abutalharaj002/videos/1032319684962549/" 
-            data-width="560" 
-            data-show-text="false" 
-            data-autoplay="true"></div>
-    </div>
-
-    <script>
-        // Load the Facebook SDK
-        window.fbAsyncInit = function() {
-            FB.init({
-                xfbml      : true,
-                version    : 'v10.0'
-            });
-
-            // Subscribe to video player events
-            FB.Event.subscribe('xfbml.ready', function(msg) {
-                if (msg.type === 'video') {
-                    var video1Player = msg.instance;
-
-                    // Listen for the end of the first video
-                    video1Player.subscribe('finishedPlaying', function() {
-                        // Hide the first video container
-                        document.getElementById('fb-video1-container').style.display = 'none';
-                        
-                        // Show the second video container and reload it
-                        document.getElementById('fb-video2-container').style.display = 'block';
-
-                        // Reload the XFBML to render the second video
-                        FB.XFBML.parse(document.getElementById('fb-video2-container'));
-                    });
-                }
-            });
-        };
-
-        // Load the Facebook SDK asynchronously
-        (function(d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = "https://connect.facebook.net/en_US/sdk.js";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
-
+    <!-- Facebook Video Embed -->
+    <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fabutalharaj002%2Fvideos%2F475659621772404%2F&show_text=false&width=560&t=0" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
 </body>
 </html>
