--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embed Facebook Video</title>
     <style>
-        /* Styles for responsive iframe */
+        /* Styles for responsive video container */
         .video-container {
             position: relative;
-            width: 100%;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            width: 100%; /* Full width */
             height: 0;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
             overflow: hidden;
+            margin: 0 auto; /* Center align */
         }
+
         .video-container iframe {
             position: absolute;
             top: 0;
@@ -20,7 +22,6 @@
             width: 100%;
             height: 100%;
             border: none;
-            overflow: hidden;
         }
     </style>
 </head>
