--- a/index.html
+++ b/index.html
@@ -7,20 +7,14 @@
     <style>
         /* Styles for responsive video container */
         .video-container {
-            position: relative;
-            width: 100%; /* Full width */
-            height: 0;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
-            overflow: hidden;
-            margin: 0 auto; /* Center align */
+            width: 100%;
+            height: 100vh;
+            border: none;
         }
 
         .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
-            height: 100%;
+            height: 100vh;
             border: none;
         }
     </style>
